syntax = "proto3";

package ls.proto.eigen;

message VectorXd {
    repeated double coeff = 1;
    optional int32 size = 2;
}

message MatrixXd {
    repeated VectorXd row = 1;
    optional int32 rows = 2;
    optional int32 cols = 3;
}